2004-05-26  Julien Puydt  <julien.puydt@laposte.net>

	* src/chat_window.cpp: fixed a memory management oddity, that leads to
	a crash on WIN32 (thanks to Xavier Ricco!)

2004-05-26  Damien Sandras  <dsandras@gnome.org>

	* lib/Makefile.am, lib/e-splash.c, lib/eggtrayicon.c, 
	lib/gm_conf-glib.c, lib/about/Makefile.am, lib/contacts/Makefile.am, 
	lib/druid/Makefile.am, lib/widgets/Makefile.am, 
	lib/widgets/history-combo.c, lib/xdap/Makefile.am, lib/xdap/xdap.c,
	lib/xdap/xdap.h, src/callbacks.cpp, src/main_window.cpp, 
	src/pref_window.cpp: Portability fixes for Win32. Thanks to Xavier
	Ricco.

2004-05-26  Damien Sandras  <dsandras@gnome.org>

	* lib/dialog.c, lib/dialog.h: Added function
	gnomemeeting_threads_dialog_show to show a dialog from threads. That's
	a workaround for GTK+ WIN32 problems.

	* src/callbacks.cpp, src/endpoint.cpp, src/misc.cpp, 
	src/sound_handling.cpp, src/videograbber.cpp: Use the new function
	when required.

2004-05-25  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Also update sensitivity for the call
	menu item.

2004-05-25  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Fixed API for
	gnomemeeting_edit_contact_dialog_run to make it simple. Added function
	that updates the "properties and add contact to address book" menu
	items sensitivity following what is selected (addressbook alone,
	remote contact or local contact). Will be extended later.

2004-05-24  Damien Sandras  <dsandras@gnome.org>

	* lib/dialog.c: Fixes to work around the various problems of GTK+
	for Windows.
	
	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts-local.h,
	lib/contacts/gm_contacts-remote.cpp,
	lib/contacts/gm_contacts-remote.h, lib/contacts/gm_contacts.cpp:
	Make sure the developer (me) can not use the "hidden" parts of the
	API.

	* src/addressbook_window.cpp: Changed include to comply with the error
	message displayed above if the developer is trying to use the "hidden"
	part of the API.
