@@ -1,7 +1,17 @@
+2004-05-26  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/widgets/history-combo.c, lib/xdap/xdap.c, src/callbacks.cpp,
+	src/config.cpp, src/main_window.cpp, src/tray.cpp: More fixes.
+	Added Xavier Ricco and Julien Hamaide to the About Box.
+
 2004-05-26  Julien Puydt  <julien.puydt@laposte.net>
 
 	* src/chat_window.cpp: fixed a memory management oddity, that leads to
 	a crash on WIN32 (thanks to Xavier Ricco!)
+
+2004-05-26  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/widgets/history-combo.c, lib/xdap/xdap.c: More fixes.
 
 2004-05-26  Damien Sandras  <dsandras@gnome.org>
 
